--- a/Androidteam/bin/AndroidManifest.xml
+++ b/Androidteam/bin/AndroidManifest.xml
@@ -14,7 +14,7 @@
             android:label="@string/app_name"
             android:theme="@style/AppTheme">
         <activity
-            android:name="com.etech.myteam.activity.RegisterActivity"
+            android:name="com.etech.myteam.activity.MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -25,7 +25,7 @@
             android:name="com.etech.myteam.activity.LoginActivity">
         </activity>
         <activity
-            android:name="com.etech.myteam.activity.MainActivity">
+            android:name="com.etech.myteam.activity.RegisterActivity">
         </activity>
     </application>
     <uses-permission android:name="android.permission.INTERNET" />
