--- a/Androidteam/AndroidManifest.xml
+++ b/Androidteam/AndroidManifest.xml
@@ -14,7 +14,7 @@
             android:label="@string/app_name"
             android:theme="@style/AppTheme">
         <activity
-            android:name="com.etech.myteam.activity.InforActivity"
+            android:name="com.etech.myteam.activity.MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -26,6 +26,12 @@
         </activity>
         <activity
             android:name="com.etech.myteam.activity.RegisterActivity">
+        </activity>
+        <activity 
+            android:name="com.etech.myteam.activity.TeamActivity">
+        </activity>
+        <activity 
+            android:name="com.etech.myteam.activity.InforActivity">
         </activity>
     </application>
     <uses-permission android:name="android.permission.INTERNET" />
