--- a/Androidteam/AndroidManifest.xml
+++ b/Androidteam/AndroidManifest.xml
@@ -14,7 +14,7 @@
             android:label="@string/app_name"
             android:theme="@style/AppTheme">
         <activity
-            android:name="com.etech.myteam.activity.MainActivity"
+            android:name="com.etech.myteam.activity.LoginActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -22,7 +22,7 @@
                 </intent-filter>
         </activity>
         <activity 
-            android:name="com.etech.myteam.activity.LoginActivity">
+            android:name="com.etech.myteam.activity.MainActivity">
         </activity>
         <activity
             android:name="com.etech.myteam.activity.RegisterActivity">
