--- a/Androidteam/AndroidManifest.xml
+++ b/Androidteam/AndroidManifest.xml
@@ -33,6 +33,9 @@
         <activity 
             android:name="com.etech.myteam.activity.InforActivity">
         </activity>
+        <activity
+            android:name="com.etech.myteam.activity.NewTeamActivity">
+        </activity>
     </application>
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
