--- a/Androidteam/AndroidManifest.xml
+++ b/Androidteam/AndroidManifest.xml
@@ -36,6 +36,9 @@
         <activity
             android:name="com.etech.myteam.activity.NewTeamActivity">
         </activity>
+        <activity
+            android:name="com.etech.myteam.activity.MyInfoActivity">
+        </activity>
     </application>
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
